--- a/ICD-10-code-F44/css/homer.css
+++ b/ICD-10-code-F44/css/homer.css
@@ -20,7 +20,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
-  color: #000000;
+  color: #FFFFFF;
 }
 body header h1 {
   margin: 5px;
